# quarto_paywall

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cover.html  cover.out  crates.js  database.go  database_test.go  docker-compose.yml  go.mod  go.sum  help.html  index.html  main.go  paywall.go  paywall_test.go  recursive_loader.go  recursive_loader_test.go  search-index.js  settings.html  src-files.js  test_paywall.out
rust_server/: 2  Cargo.toml  README.md  all.html  index.html  sidebar-items.js
rust_server/database/: index.html  sidebar-items.js
rust_server/envvars/: index.html  sidebar-items.js  struct.EnvVarLoader.html
rust_server/errors/: index.html  sidebar-items.js
rust_server/models/: index.html  sidebar-items.js
rust_server/paywall/: index.html  login_button_html.html  login_button_script.html  login_modal_html.html  paywall.html  sidebar-items.js  verifywall.html
rust_server/price/: index.html  sidebar-items.js  struct.Currency.html  struct.Price.html
rust_server/purchase/: index.html  sidebar-items.js
rust_server/routes/: index.html  sidebar-items.js
rust_server/security/: index.html  sidebar-items.js
rust_server/src/: envvars.rs  func_utils.rs  inmemory_html_server.rs  inmemory_static_files.rs  lib.rs  mail.rs  main.rs  price.rs  routes.rs  routes_old.rs  security.rs  templates.rs  utils.rs
rust_server/templates/: delete_user.html  delete_user_confirmed.html  index.html  login.html  login_success.html  logout_success.html  password_recover.html  paywall.html  register.html  register_success.html  sidebar-items.js  (+11 more)
(+263 files in other folders)
