[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
askama = "0.12.1"
async-trait = "0.1.74"
chrono = "0.4.31"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
html_editor = "0.6.1"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
scrypt = "0.11.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
walkdir = "2.4.0"
